# classpub-cli

./: .gitignore  README.md  TDD.md  justfile  pyproject.toml
.github/workflows/: ci.yml
pending/: RELEASES.txt
sandbox-e2e/pending/: RELEASES.txt
sandbox-e2e/pending/notebooks/: demo.ipynb
sandbox-e2e/preview/notebooks/: demo.ipynb
scripts/: e2e-demo.sh
src/classpub_cli/: __init__.py  clean.py  cli.py  config.py  convert.py  diff.py  install.py  logging.py  paths.py  status.py  sync.py  utils.py  validate.py
tests/: conftest.py  helpers.py  test_cli_check.py  test_cli_clean.py  test_cli_config.py  test_cli_diff.py  test_cli_errors.py  test_cli_globals.py  test_cli_help.py  test_cli_init.py  test_cli_install.py  test_cli_release_remove.py  test_cli_sync.py  test_cli_to_md.py  test_cli_validate.py  test_cli_version.py  test_locking.py  test_logging.py  test_path_resolution.py  test_status_engine.py  test_utils_formatters.py  test_utils_git.py
