[project]
name = "classpub-cli"
version = "0.1.0"
description = "Course content management and publishing CLI"
readme = "README.md"
authors = [
    { name = "Dan O'Leary", email = "oleary.dj@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12,<0.13",
    "rich>=13,<14",
    "platformdirs>=4,<5",
    "nbformat>=5,<6",
    "nbdime>=3,<4",
    "nbconvert>=7,<8",
    "nbstripout>=0.6",
    "click>=8.1,<8.2",
]

[project.scripts]
classpub = "classpub_cli.cli:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "ipykernel>=6.30.1",
]
